make minor updates - verification, direct debit layout

--- a/verification/resolve-a-card-bin.mdx
+++ b/verification/resolve-a-card-bin.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Card BIN Lookup"
-sidebarTitle: "Card BIN Lookup"
+title: "Resolve a Card BIN"
+sidebarTitle: "Resolve a Card BIN"
 description: "Look up card metadata using the first 6-8 digits of a card number."
 ---
 
