update, homepage, payouts, dev resources

--- a/developer-resources/overview.mdx
+++ b/developer-resources/overview.mdx
@@ -1,5 +1,73 @@
 ---
 title: "Developer Resources"
 sidebarTitle: "Overview"
-description: "Learn what you need to build a successful integration with Fincra."
+description: "Everything you need to build, test, and ship your Fincra integration."
 ---
+
+Fincra's developer tools are designed to get you from first API call to production as quickly as possible.
+
+<CardGroup cols={2}>
+  <Card title="API" icon="code" href="/developer-resources/manage-api-keys">
+    Authenticate your requests, manage API keys, understand rate limits, and configure IP whitelisting.
+  </Card>
+  <Card title="Postman Collection" icon="rectangle-terminal" href="/developer-resources/postman-collection">
+    Explore and test every Fincra endpoint without writing code — fully configured and ready to use.
+  </Card>
+  <Card title="Server-Side SDKs" icon="server" href="/developer-resources/server-side-sdks">
+    Official libraries for Node.js and Python to speed up your backend integration.
+  </Card>
+  <Card title="Mobile SDKs" icon="mobile" href="/developer-resources/mobile-sdks">
+    Native iOS SDK for accepting payments inside your mobile app.
+  </Card>
+  <Card title="Webhooks" icon="webhook" href="/webhooks/overview">
+    Receive real-time event notifications for payments, payouts, conversions, and more.
+  </Card>
+  <Card title="Sandbox Environment" icon="flask" href="/sandbox/overview">
+    Test your full integration end-to-end with simulated data before going live.
+  </Card>
+</CardGroup>
+
+## Authentication
+
+Every request to the Fincra API requires an `api-key` header. Generate your key from the Fincra dashboard — see [Manage API Keys](/developer-resources/manage-api-keys).
+
+```bash
+curl --request GET \
+  --url 'https://api.fincra.com/...' \
+  --header 'api-key: YOUR_API_KEY'
+```
+
+Some endpoints additionally require `x-pub-key` or `x-business-id` — these are documented on each endpoint where applicable.
+
+## Base URLs
+
+| Environment | Base URL |
+|---|---|
+| Production | `https://api.fincra.com` |
+| Sandbox | `https://sandboxapi.fincra.com` |
+
+## Request format
+
+All request bodies are JSON. Always include `Content-Type: application/json` on POST and PUT requests.
+
+## Response format
+
+All responses follow a consistent envelope:
+
+```json
+{
+  "success": true,
+  "message": "...",
+  "data": { ... }
+}
+```
+
+On errors, `success` is `false` and the error details are returned:
+
+```json
+{
+  "success": false,
+  "error": "Human-readable message",
+  "errorType": "MACHINE_READABLE_CODE"
+}
+```
